--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -23,6 +23,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASSWD }}
 
   deploy:
    runs-on: ubuntu-latest
