--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_RASSWD }}
+          password: ${{ secrets.DOCKER_HUB_PASSWD }}
           
       - name: Set up Docker Buildx
         id: buildx
