--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -38,8 +38,10 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          build-args:
+            mongo_uri=${{ MONGODB_URI }}
           context: ./
-          file: ./Dockerfile
+          file: ./dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags:  ${{ secrets.DOCKER_HUB_USERNAME }}/todo:${{ github.sha }}
