--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -38,7 +38,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          build-args:
+          build-args: |
             mongo_uri=${{ MONGODB_URI }}
           context: ./
           file: ./dockerfile
