--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           build-args: |
-            mongo_uri=${{ MONGODB_URI }}
+            mongo_uri=${{ secrets.MONGODB_URI }}
           context: ./
           file: ./dockerfile
           builder: ${{ steps.buildx.outputs.name }}
