--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -31,11 +31,12 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWD }}
           
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v1
       
+      - name: Version(shot sha of git commit)
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+        
       - name: Build new version of image and push it to docker hub registry
-        id: docker_build
         uses: docker/build-push-action@v2
         with:
           build-args: |
@@ -44,7 +45,7 @@ jobs:
           file: ./dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags:  ${{ secrets.DOCKER_HUB_USERNAME }}/todo:${{ github.sha }}
+          tags:  ${{ secrets.DOCKER_HUB_USERNAME }}/todo:${ SHORT_SHA}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           
