--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -26,7 +26,7 @@ jobs:
        with:
          aws-access-key-id    :  ${{ secrets.AWS_ACCESS_KEY }}
          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         aws-region           :  ${{ env.AWS_REGION }}
+         aws-region           :  ${{ secrets.AWS_REGION }}
      
      - name: Check aws creadentials
        run : aws sts get-caller-identity
