--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -68,6 +68,19 @@ jobs:
          aws-access-key-id    :  ${{ secrets.AWS_ACCESS_KEY }}
          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region           :  ${{ secrets.AWS_REGION }}
-     
-     - name: Check aws creadentials
-       run : aws sts get-caller-identity
+         
+     - name: Get kube config
+       run: aws eks update-kubeconfig --name node-cluster --region us-east-2
+    
+     - name: Watch running deployments
+       run: kubectl get deployments
+
+     - name: Update image in pods
+       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USERNAME }}/todo:${{ env.SHORT_SHA }}
+         
+     - name: Check deployment
+       uses: kodermax/kubectl-aws-eks@master
+       env:
+         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+       with:
+         args: rollout status deployment/todo-app-deployment
