--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -76,7 +76,7 @@ jobs:
        run: kubectl get deployments
 
      - name: Update image in pods
-       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USERNAME }}/todo:${{ env.SHORT_SHA }}
+       run: kubectl set image deployment/todo-app-deployment todo-app=mikegcoleman/todo:latest
          
      - name: Check deployment
        uses: kodermax/kubectl-aws-eks@master
