--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       
       - name: Version(shot sha of git commit)
-        run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+        run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-6`" >> $GITHUB_ENV
         
       - name: Build new version of image and push it to docker hub registry
         uses: docker/build-push-action@v2
@@ -60,7 +60,7 @@ jobs:
        run : echo "Hi!"
      
      - name: Version(shot sha of git commit)
-       run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+       run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-6`" >> $GITHUB_ENV
        
      - name: Configure my AWS Credentials
        uses: aws-actions/configure-aws-credentials@v1
@@ -76,7 +76,7 @@ jobs:
        run: kubectl get deployments
 
      - name: Update image in pods
-       run: kubectl set image deployment/todo-app-deployment todo-app=mikegcoleman/todo:latest
+       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USER }}/todo-app:${{ env.SHORT_SHA }}
          
      - name: Check deployment
        uses: kodermax/kubectl-aws-eks@master
