--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -45,7 +45,7 @@ jobs:
           file      : ./dockerfile
           builder   : ${{ steps.buildx.outputs.name }}
           push      : true
-          tags      :  ${{ secrets.DOCKER_HUB_USER }}/todo:${{ env.SHORT_SHA }}
+          tags      :  ${{ secrets.DOCKER_HUB_USER }}/todo:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to  : type=local,dest=/tmp/.buildx-cache
           
@@ -76,7 +76,7 @@ jobs:
        run: kubectl get deployments
 
      - name: Update image in pods
-       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USER }}/todo-app:${{ env.SHORT_SHA }}
+       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USER }}/todo-app:latest
          
      - name: Check deployment
        uses: kodermax/kubectl-aws-eks@master
