--- a/.github/workflows/pipelinedeploy.yml
+++ b/.github/workflows/pipelinedeploy.yml
@@ -34,7 +34,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
       
       - name: Version(shot sha of git commit)
-        run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-6`" >> $GITHUB_ENV
+        id  : new_version
+        run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
         
       - name: Build new version of image and push it to docker hub registry
         uses: docker/build-push-action@v2
@@ -45,7 +46,7 @@ jobs:
           file      : ./dockerfile
           builder   : ${{ steps.buildx.outputs.name }}
           push      : true
-          tags      :  ${{ secrets.DOCKER_HUB_USER }}/todo:latest
+          tags      :  ${{ secrets.DOCKER_HUB_USER }}/todo:${{ steps.new_version.outputs.SHORT_SHA }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to  : type=local,dest=/tmp/.buildx-cache
           
@@ -60,7 +61,8 @@ jobs:
        run : echo "Hi!"
      
      - name: Version(shot sha of git commit)
-       run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-6`" >> $GITHUB_ENV
+       id  : new_version
+       run : echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
        
      - name: Configure my AWS Credentials
        uses: aws-actions/configure-aws-credentials@v1
@@ -76,7 +78,7 @@ jobs:
        run: kubectl get deployments
 
      - name: Update image in pods
-       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USER }}/todo-app:latest
+       run: kubectl set image deployment/todo-app-deployment todo-app=${{ secrets.DOCKERHUB_USER }}/todo-app:${{ steps.new_version.outputs.SHORT_SHA }}
          
      - name: Check deployment
        uses: kodermax/kubectl-aws-eks@master
